--- a/polish_time_fst.ipynb
+++ b/polish_time_fst.ipynb
@@ -16,13 +16,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "q2M31cnCKJy_",
-        "outputId": "711d7e8e-15a3-4833-f7d9-49ebd5e8d955"
+        "outputId": "a88225c8-9871-4e30-e32e-39d9ec673d8c"
       },
       "outputs": [
         {
@@ -31,7 +31,7 @@
           "text": [
             "Collecting pynini\n",
             "  Downloading pynini-2.1.6-cp310-cp310-manylinux_2_28_x86_64.whl (154.5 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m154.5/154.5 MB\u001b[0m \u001b[31m6.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m154.5/154.5 MB\u001b[0m \u001b[31m1.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: pynini\n",
             "Successfully installed pynini-2.1.6\n"
           ]
@@ -61,61 +61,148 @@
       "metadata": {
         "id": "Gwm2fcUbKk3w"
       },
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Data"
+      ],
+      "metadata": {
+        "id": "iIFOOIHCJ4LE"
+      }
     },
     {
       "cell_type": "code",
       "source": [
         "NumeralsDict = dict[str, str]\n",
         "\n",
-        "def create_hours_transducer():\n",
-        "  numeral_to_hour: NumeralsDict = {\n",
-        "      \"Pierwsza\": \"01\",\n",
-        "      \"Druga\": \"02\",\n",
-        "      \"Trzecia\": \"03\",\n",
-        "      \"Czwarta\": \"04\",\n",
-        "      \"Piąta\": \"05\",\n",
-        "      \"Szósta\": \"06\",\n",
-        "      \"Siódma\": \"07\",\n",
-        "      \"Ósma\": \"08\",\n",
-        "      \"Dziewiąta\": \"09\",\n",
-        "      \"Dziesiąta\": \"10\",\n",
-        "      \"Jedenasta\": \"11\",\n",
-        "      \"Dwunasta\": \"12\",\n",
-        "      \"Trzynasta\": \"13\",\n",
-        "      \"Czternasta\": \"14\",\n",
-        "      \"Piętnasta\": \"15\",\n",
-        "      \"Szesnasta\": \"16\",\n",
-        "      \"Siedemnasta\": \"17\",\n",
-        "      \"Osiemnasta\": \"18\",\n",
-        "      \"Dziewiętnasta\": \"19\",\n",
-        "      \"Dwudziesta\": \"20\",\n",
-        "      \"Dwudziesta pierwsza\": \"21\",\n",
-        "      \"Dwudziesta druga\": \"22\",\n",
-        "      \"Dwudziestwa trzecia\": \"23\",\n",
-        "      \"Dwudziesta czwarta\": \"24\"\n",
-        "  }\n",
+        "numeral_to_hours = {\n",
+        "    \"01\": \"Pierwsza\",\n",
+        "    \"02\": \"Druga\",\n",
+        "    \"03\": \"Trzecia\",\n",
+        "    \"04\": \"Czwarta\",\n",
+        "    \"05\": \"Piąta\",\n",
+        "    \"06\": \"Szósta\",\n",
+        "    \"07\": \"Siódma\",\n",
+        "    \"08\": \"Ósma\",\n",
+        "    \"09\": \"Dziewiąta\",\n",
+        "    \"10\": \"Dziesiąta\",\n",
+        "    \"11\": \"Jedenasta\",\n",
+        "    \"12\": \"Dwunasta\",\n",
+        "    \"13\": \"Trzynasta\",\n",
+        "    \"14\": \"Czternasta\",\n",
+        "    \"15\": \"Piętnasta\",\n",
+        "    \"16\": \"Szesnasta\",\n",
+        "    \"17\": \"Siedemnasta\",\n",
+        "    \"18\": \"Osiemnasta\",\n",
+        "    \"19\": \"Dziewiętnasta\",\n",
+        "    \"20\": \"Dwudziesta\",\n",
+        "    \"21\": \"Dwudziesta pierwsza\",\n",
+        "    \"22\": \"Dwudziesta druga\",\n",
+        "    \"23\": \"Dwudziestwa trzecia\",\n",
+        "    \"24\": \"Dwudziesta czwarta\"\n",
+        "}\n",
         "\n",
-        "  hours_transducer: Fst = pn.string_map(numeral_to_hour.items())\n",
-        "\n",
-        "  return hours_transducer"
+        "numeral_to_minutes = {\n",
+        "    \"01\": \"Jeden\",\n",
+        "    \"02\": \"Dwa\",\n",
+        "    \"03\": \"Trzy\",\n",
+        "    \"04\": \"Cztery\",\n",
+        "    \"05\": \"Pięć\",\n",
+        "    \"06\": \"Sześć\",\n",
+        "    \"07\": \"Siedem\",\n",
+        "    \"08\": \"Osiem\",\n",
+        "    \"09\": \"Dziewięć\",\n",
+        "    \"10\": \"Dziesięć\",\n",
+        "    \"11\": \"Jedenaście\",\n",
+        "    \"12\": \"Dwanaście\",\n",
+        "    \"13\": \"Trzynaście\",\n",
+        "    \"14\": \"Czternaście\",\n",
+        "    \"15\": \"Piętnaście\",\n",
+        "    \"16\": \"Szesnaście\",\n",
+        "    \"17\": \"Siedemnaście\",\n",
+        "    \"18\": \"Osiemnaście\",\n",
+        "    \"19\": \"Dziewiętnaście\",\n",
+        "    \"20\": \"Dwadzieścia\",\n",
+        "    \"21\": \"Dwadzieścia jeden\",\n",
+        "    \"22\": \"Dwadzieścia dwa\",\n",
+        "    \"23\": \"Dwadzieścia trzy\",\n",
+        "    \"24\": \"Dwadzieścia cztery\",\n",
+        "    \"25\": \"Dwadzieścia pięć\",\n",
+        "    \"26\": \"Dwadzieścia sześć\",\n",
+        "    \"27\": \"Dwadzieścia siedem\",\n",
+        "    \"28\": \"Dwadzieścia osiem\",\n",
+        "    \"29\": \"Dwadzieścia dziewięć\",\n",
+        "    \"30\": \"Trzydzieści\",\n",
+        "    \"31\": \"Trzydzieści jeden\",\n",
+        "    \"32\": \"Trzydzieści dwa\",\n",
+        "    \"33\": \"Trzydzieści trzy\",\n",
+        "    \"34\": \"Trzydzieści cztery\",\n",
+        "    \"35\": \"Trzydzieści pięć\",\n",
+        "    \"36\": \"Trzydzieści sześć\",\n",
+        "    \"37\": \"Trzydzieści siedem\",\n",
+        "    \"38\": \"Trzydzieści osiem\",\n",
+        "    \"39\": \"Trzydzieści dziewięć\",\n",
+        "    \"40\": \"Czterdzieści\",\n",
+        "    \"41\": \"Czterdzieści jeden\",\n",
+        "    \"42\": \"Czterdzieści dwa\",\n",
+        "    \"43\": \"Czterdzieści trzy\",\n",
+        "    \"44\": \"Czterdzieści cztery\",\n",
+        "    \"45\": \"Czterdzieści pięć\",\n",
+        "    \"46\": \"Czterdzieści sześć\",\n",
+        "    \"47\": \"Czterdzieści siedem\",\n",
+        "    \"48\": \"Czterdzieści osiem\",\n",
+        "    \"49\": \"Czterdzieści dziewięć\",\n",
+        "    \"50\": \"Pięćdziesiąt\",\n",
+        "    \"51\": \"Pięćdziesiąt jeden\",\n",
+        "    \"52\": \"Pięćdziesiąt dwa\",\n",
+        "    \"53\": \"Pięćdziesiąt trzy\",\n",
+        "    \"54\": \"Pięćdziesiąt cztery\",\n",
+        "    \"55\": \"Pięćdziesiąt pięć\",\n",
+        "    \"56\": \"Pięćdziesiąt sześć\",\n",
+        "    \"57\": \"Pięćdziesiąt siedem\",\n",
+        "    \"58\": \"Pięćdziesiąt osiem\",\n",
+        "    \"59\": \"Pięćdziesiąt dziewięć\"\n",
+        "}\n"
       ],
       "metadata": {
-        "id": "QaHT9qdshEbk"
+        "id": "CKZjCNegJ5hH"
       },
-      "execution_count": 110,
+      "execution_count": 27,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "transducer = create_hours_transducer()"
+        "def create_time_transducer(hours_dict: NumeralsDict,\n",
+        "                            minutes_dict: NumeralsDict) -> Fst:\n",
+        "\n",
+        "  hours_transducer: Fst = pn.string_map(hours_dict.items())\n",
+        "  minutes_transducer: Fst = pn.string_map(minutes_dict.items())\n",
+        "  colon = pn.accep(\":\")\n",
+        "\n",
+        "  time_transducer: Fst = hours_transducer + colon + minutes_transducer\n",
+        "\n",
+        "  return time_transducer"
+      ],
+      "metadata": {
+        "id": "QaHT9qdshEbk"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "transducer = create_time_transducer(hours_dict=numeral_to_hours,\n",
+        "                                    minutes_dict=numeral_to_minutes)"
       ],
       "metadata": {
         "id": "0GIuJGIQhs9q"
       },
-      "execution_count": 111,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -133,28 +220,28 @@
       "metadata": {
         "id": "sv1FWLGWo_2E"
       },
-      "execution_count": 112,
+      "execution_count": 30,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(transduce_numeral(\"Pierwsza\", transducer))"
+        "print(transduce_numeral(\"Jedenasta:Dziesięć\", transducer))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "V__Hr71qpIhz",
-        "outputId": "2a90c1d2-624b-4605-d0f9-e403a27b6e76"
+        "outputId": "7d6c95a2-64d9-49b7-c478-09d419f2d1bc"
       },
-      "execution_count": 114,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "01\n"
+            "Invalid numeral\n"
           ]
         }
       ]
