--- a/polish_time_fst.ipynb
+++ b/polish_time_fst.ipynb
@@ -16,13 +16,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "q2M31cnCKJy_",
-        "outputId": "a88225c8-9871-4e30-e32e-39d9ec673d8c"
+        "outputId": "4d65d678-98b8-4fd9-9f7d-8a6046e6cbca"
       },
       "outputs": [
         {
@@ -31,7 +31,7 @@
           "text": [
             "Collecting pynini\n",
             "  Downloading pynini-2.1.6-cp310-cp310-manylinux_2_28_x86_64.whl (154.5 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m154.5/154.5 MB\u001b[0m \u001b[31m1.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m154.5/154.5 MB\u001b[0m \u001b[31m2.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: pynini\n",
             "Successfully installed pynini-2.1.6\n"
           ]
@@ -61,7 +61,7 @@
       "metadata": {
         "id": "Gwm2fcUbKk3w"
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -78,99 +78,99 @@
       "source": [
         "NumeralsDict = dict[str, str]\n",
         "\n",
-        "numeral_to_hours = {\n",
-        "    \"01\": \"Pierwsza\",\n",
-        "    \"02\": \"Druga\",\n",
-        "    \"03\": \"Trzecia\",\n",
-        "    \"04\": \"Czwarta\",\n",
-        "    \"05\": \"Piąta\",\n",
-        "    \"06\": \"Szósta\",\n",
-        "    \"07\": \"Siódma\",\n",
-        "    \"08\": \"Ósma\",\n",
-        "    \"09\": \"Dziewiąta\",\n",
-        "    \"10\": \"Dziesiąta\",\n",
-        "    \"11\": \"Jedenasta\",\n",
-        "    \"12\": \"Dwunasta\",\n",
-        "    \"13\": \"Trzynasta\",\n",
-        "    \"14\": \"Czternasta\",\n",
-        "    \"15\": \"Piętnasta\",\n",
-        "    \"16\": \"Szesnasta\",\n",
-        "    \"17\": \"Siedemnasta\",\n",
-        "    \"18\": \"Osiemnasta\",\n",
-        "    \"19\": \"Dziewiętnasta\",\n",
-        "    \"20\": \"Dwudziesta\",\n",
-        "    \"21\": \"Dwudziesta pierwsza\",\n",
-        "    \"22\": \"Dwudziesta druga\",\n",
-        "    \"23\": \"Dwudziestwa trzecia\",\n",
-        "    \"24\": \"Dwudziesta czwarta\"\n",
+        "hours_dict: NumeralsDict = {\n",
+        "    \"Pierwsza\": \"01\",\n",
+        "    \"Druga\": \"02\",\n",
+        "    \"Trzecia\": \"03\",\n",
+        "    \"Czwarta\": \"04\",\n",
+        "    \"Piąta\": \"05\",\n",
+        "    \"Szósta\": \"06\",\n",
+        "    \"Siódma\": \"07\",\n",
+        "    \"Ósma\": \"08\",\n",
+        "    \"Dziewiąta\": \"09\",\n",
+        "    \"Dziesiąta\": \"10\",\n",
+        "    \"Jedenasta\": \"11\",\n",
+        "    \"Dwunasta\": \"12\",\n",
+        "    \"Trzynasta\": \"13\",\n",
+        "    \"Czternasta\": \"14\",\n",
+        "    \"Piętnasta\": \"15\",\n",
+        "    \"Szesnasta\": \"16\",\n",
+        "    \"Siedemnasta\": \"17\",\n",
+        "    \"Osiemnasta\": \"18\",\n",
+        "    \"Dziewiętnasta\": \"19\",\n",
+        "    \"Dwudziesta\": \"20\",\n",
+        "    \"Dwudziesta pierwsza\": \"21\",\n",
+        "    \"Dwudziesta druga\": \"22\",\n",
+        "    \"Dwudziesta trzecia\": \"23\",\n",
+        "    \"Dwudziesta czwarta\": \"24\"\n",
         "}\n",
         "\n",
-        "numeral_to_minutes = {\n",
-        "    \"01\": \"Jeden\",\n",
-        "    \"02\": \"Dwa\",\n",
-        "    \"03\": \"Trzy\",\n",
-        "    \"04\": \"Cztery\",\n",
-        "    \"05\": \"Pięć\",\n",
-        "    \"06\": \"Sześć\",\n",
-        "    \"07\": \"Siedem\",\n",
-        "    \"08\": \"Osiem\",\n",
-        "    \"09\": \"Dziewięć\",\n",
-        "    \"10\": \"Dziesięć\",\n",
-        "    \"11\": \"Jedenaście\",\n",
-        "    \"12\": \"Dwanaście\",\n",
-        "    \"13\": \"Trzynaście\",\n",
-        "    \"14\": \"Czternaście\",\n",
-        "    \"15\": \"Piętnaście\",\n",
-        "    \"16\": \"Szesnaście\",\n",
-        "    \"17\": \"Siedemnaście\",\n",
-        "    \"18\": \"Osiemnaście\",\n",
-        "    \"19\": \"Dziewiętnaście\",\n",
-        "    \"20\": \"Dwadzieścia\",\n",
-        "    \"21\": \"Dwadzieścia jeden\",\n",
-        "    \"22\": \"Dwadzieścia dwa\",\n",
-        "    \"23\": \"Dwadzieścia trzy\",\n",
-        "    \"24\": \"Dwadzieścia cztery\",\n",
-        "    \"25\": \"Dwadzieścia pięć\",\n",
-        "    \"26\": \"Dwadzieścia sześć\",\n",
-        "    \"27\": \"Dwadzieścia siedem\",\n",
-        "    \"28\": \"Dwadzieścia osiem\",\n",
-        "    \"29\": \"Dwadzieścia dziewięć\",\n",
-        "    \"30\": \"Trzydzieści\",\n",
-        "    \"31\": \"Trzydzieści jeden\",\n",
-        "    \"32\": \"Trzydzieści dwa\",\n",
-        "    \"33\": \"Trzydzieści trzy\",\n",
-        "    \"34\": \"Trzydzieści cztery\",\n",
-        "    \"35\": \"Trzydzieści pięć\",\n",
-        "    \"36\": \"Trzydzieści sześć\",\n",
-        "    \"37\": \"Trzydzieści siedem\",\n",
-        "    \"38\": \"Trzydzieści osiem\",\n",
-        "    \"39\": \"Trzydzieści dziewięć\",\n",
-        "    \"40\": \"Czterdzieści\",\n",
-        "    \"41\": \"Czterdzieści jeden\",\n",
-        "    \"42\": \"Czterdzieści dwa\",\n",
-        "    \"43\": \"Czterdzieści trzy\",\n",
-        "    \"44\": \"Czterdzieści cztery\",\n",
-        "    \"45\": \"Czterdzieści pięć\",\n",
-        "    \"46\": \"Czterdzieści sześć\",\n",
-        "    \"47\": \"Czterdzieści siedem\",\n",
-        "    \"48\": \"Czterdzieści osiem\",\n",
-        "    \"49\": \"Czterdzieści dziewięć\",\n",
-        "    \"50\": \"Pięćdziesiąt\",\n",
-        "    \"51\": \"Pięćdziesiąt jeden\",\n",
-        "    \"52\": \"Pięćdziesiąt dwa\",\n",
-        "    \"53\": \"Pięćdziesiąt trzy\",\n",
-        "    \"54\": \"Pięćdziesiąt cztery\",\n",
-        "    \"55\": \"Pięćdziesiąt pięć\",\n",
-        "    \"56\": \"Pięćdziesiąt sześć\",\n",
-        "    \"57\": \"Pięćdziesiąt siedem\",\n",
-        "    \"58\": \"Pięćdziesiąt osiem\",\n",
-        "    \"59\": \"Pięćdziesiąt dziewięć\"\n",
+        "minutes_dict = {\n",
+        "    \"jeden\": \"01\",\n",
+        "    \"dwa\": \"02\",\n",
+        "    \"trzy\": \"03\",\n",
+        "    \"cztery\": \"04\",\n",
+        "    \"pięć\": \"05\",\n",
+        "    \"sześć\": \"06\",\n",
+        "    \"siedem\": \"07\",\n",
+        "    \"osiem\": \"08\",\n",
+        "    \"dziewięć\": \"09\",\n",
+        "    \"dziesięć\": \"10\",\n",
+        "    \"jedenaście\": \"11\",\n",
+        "    \"dwanaście\": \"12\",\n",
+        "    \"trzynaście\": \"13\",\n",
+        "    \"czternaście\": \"14\",\n",
+        "    \"piętnaście\": \"15\",\n",
+        "    \"szesnaście\": \"16\",\n",
+        "    \"siedemnaście\": \"17\",\n",
+        "    \"osiemnaście\": \"18\",\n",
+        "    \"dziewiętnaście\": \"19\",\n",
+        "    \"dwadzieścia\": \"20\",\n",
+        "    \"dwadzieścia jeden\": \"21\",\n",
+        "    \"dwadzieścia dwa\": \"22\",\n",
+        "    \"dwadzieścia trzy\": \"23\",\n",
+        "    \"dwadzieścia cztery\": \"24\",\n",
+        "    \"dwadzieścia pięć\": \"25\",\n",
+        "    \"dwadzieścia sześć\": \"26\",\n",
+        "    \"dwadzieścia siedem\": \"27\",\n",
+        "    \"dwadzieścia osiem\": \"28\",\n",
+        "    \"dwadzieścia dziewięć\": \"29\",\n",
+        "    \"trzydzieści\": \"30\",\n",
+        "    \"trzydzieści jeden\": \"31\",\n",
+        "    \"trzydzieści dwa\": \"32\",\n",
+        "    \"trzydzieści trzy\": \"33\",\n",
+        "    \"trzydzieści cztery\": \"34\",\n",
+        "    \"trzydzieści pięć\": \"35\",\n",
+        "    \"trzydzieści sześć\": \"36\",\n",
+        "    \"trzydzieści siedem\": \"37\",\n",
+        "    \"trzydzieści osiem\": \"38\",\n",
+        "    \"trzydzieści dziewięć\": \"39\",\n",
+        "    \"czterdzieści\": \"40\",\n",
+        "    \"czterdzieści jeden\": \"41\",\n",
+        "    \"czterdzieści dwa\": \"42\",\n",
+        "    \"czterdzieści trzy\": \"43\",\n",
+        "    \"czterdzieści cztery\": \"44\",\n",
+        "    \"czterdzieści pięć\": \"45\",\n",
+        "    \"czterdzieści sześć\": \"46\",\n",
+        "    \"czterdzieści siedem\": \"47\",\n",
+        "    \"czterdzieści osiem\": \"48\",\n",
+        "    \"czterdzieści dziewięć\": \"49\",\n",
+        "    \"pięćdziesiąt\": \"50\",\n",
+        "    \"pięćdziesiąt jeden\": \"51\",\n",
+        "    \"pięćdziesiąt dwa\": \"52\",\n",
+        "    \"pięćdziesiąt trzy\": \"53\",\n",
+        "    \"pięćdziesiąt cztery\": \"54\",\n",
+        "    \"pięćdziesiąt pięć\": \"55\",\n",
+        "    \"pięćdziesiąt sześć\": \"56\",\n",
+        "    \"pięćdziesiąt siedem\": \"57\",\n",
+        "    \"pięćdziesiąt osiem\": \"58\",\n",
+        "    \"pięćdziesiąt dziewięć\": \"59\"\n",
         "}\n"
       ],
       "metadata": {
         "id": "CKZjCNegJ5hH"
       },
-      "execution_count": 27,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -181,7 +181,7 @@
         "\n",
         "  hours_transducer: Fst = pn.string_map(hours_dict.items())\n",
         "  minutes_transducer: Fst = pn.string_map(minutes_dict.items())\n",
-        "  colon = pn.accep(\":\")\n",
+        "  colon = pn.accep(\" \")\n",
         "\n",
         "  time_transducer: Fst = hours_transducer + colon + minutes_transducer\n",
         "\n",
@@ -190,19 +190,19 @@
       "metadata": {
         "id": "QaHT9qdshEbk"
       },
-      "execution_count": 28,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "transducer = create_time_transducer(hours_dict=numeral_to_hours,\n",
-        "                                    minutes_dict=numeral_to_minutes)"
+        "transducer = create_time_transducer(hours_dict=hours_dict,\n",
+        "                                    minutes_dict=minutes_dict)"
       ],
       "metadata": {
         "id": "0GIuJGIQhs9q"
       },
-      "execution_count": 29,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -212,36 +212,37 @@
         "\n",
         "def transduce_numeral(numeral: str, transducer: Fst) -> Union[str, None]:\n",
         "  try:\n",
-        "    result: str = rewrite.one_top_rewrite(numeral, transducer)\n",
-        "    return result\n",
+        "    result: str = pn.shortestpath(pn.compose(numeral, transducer)).string()\n",
+        "    formatted_result: str = result.replace(\" \", \":\")\n",
+        "    return formatted_result\n",
         "  except rewrite.Error:\n",
         "    return \"Invalid numeral\""
       ],
       "metadata": {
         "id": "sv1FWLGWo_2E"
       },
-      "execution_count": 30,
+      "execution_count": 20,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(transduce_numeral(\"Jedenasta:Dziesięć\", transducer))"
+        "print(transduce_numeral(\"Jedenasta dziesięć\", transducer))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "V__Hr71qpIhz",
-        "outputId": "7d6c95a2-64d9-49b7-c478-09d419f2d1bc"
+        "outputId": "44c0641b-2afc-4c94-b205-e1c329020e11"
       },
-      "execution_count": 31,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Invalid numeral\n"
+            "11:10\n"
           ]
         }
       ]
